<resources>
    <string name="app_name">DropShop</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--categorias-->
    <string name="pedidos">Orders</string>
    <string name="inventarios">Inventory</string>
    <string name="ventas">Sales</string>
    <!--categorias-->

    <!--fab Texts-->
    <string name="agendar_pedido">Schedule Order</string>
    <string name="stock">Stock</string>
    <string name="agregar_venta">Add Sale</string>
    <!--fab Texts-->

    <!--acercade-->
    <string name="developed_by">Developed by:</string>
    <string name="rawr_studio">Rawr Studio</string>
    <string name="acerca_de">About</string>
    <!--acercade-->

    <!--no data texts-->
    <string name="no_orders">No orders</string>
    <string name="no_inventory">No inventory</string>
    <string name="no_sales">No sales</string>
    <string name="no_categories">No categories</string>
    <!--no data texts-->

    <!--emoji text-->
    <string name="face_sad">:(</string>
    <!--emoji text-->

    <string name="categorias">Categories</string>
    <string name="todos_menu">All</string>
    <string name="add__new_category">Add Category</string>


</resources>
