<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/menu_todos"
            android:icon="@drawable/ic_assignment_white_24dp"
            android:title="@string/todos_menu" />
        <item
            android:id="@+id/menu_pedidos"
            android:icon="@drawable/ic_action_order"
            android:title="@string/pedidos" />
        <item
            android:id="@+id/menu_ventas"
            android:icon="@drawable/ic_action_sales"
            android:title="@string/ventas" />
        <item
            android:id="@+id/menu_categorias"
            android:icon="@drawable/ic_local_offer_white_24dp"
            android:title="@string/categorias" />
        <item
            android:id="@+id/menu_acerca_de"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/acerca_de" />


    </group>


</menu>